
  * uscan: Document the USCAN_DESTDIR configuration variable
    (Closes: #460717)
  * bts:
    + Fix downloading of named attachments (Closes: #460850)
    + Add support for setting X-Debbugs-No-Ack (Closes: #458973)
  * grep-excuses: Update wipnity functionality in line with the move of
    testing.pl to release.d.o
  * checkbashisms: Warn about the use of >& and &> (Closes: #461653)

 -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Thu, 24 Jan 2008 16:51:11 +0000

devscripts (2.10.13) unstable; urgency=low

  * The 'we sponsor Adam for DM' upload

  [ Mohammed Adnène Trojette ]
  * debcheckout: wrap error message. (Closes: #459372)

  [ Adam D. Barratt ]
  * grep-excuses:
    + Only check for the presence of libterm-size-perl if -w / --wipnity
      is being used.
    + Improve the error message when libterm-size-perl isn't installed.
  * debian/control: Add libterm-size-perl to the description of grep-excuses
    (Closes: #459586)
  * README: Add libterm-size-perl to the description of grep-excuses

  [ James Vega ]
  * tagpending: Handle new-style links to individual bug reports which are
    simply the bug-numer.
  * bts: Handle both relative and absolute links on BTS webpages.
  * debchange:
    + Handle both relative and absolute links when parsing BTS webpages.
      (Closes: #459947)
    + Do not include "Debian Bug report logs" in the changelog entry when
      using --closes.

  [ Luk Claes ]
  * whodepends: Support showing source packages instead of binary ones thanks
    to Otavio Salvador.

  [ Joey Hess ]
  * bts: Add a <base> tag to the page sent to the browser so that unqualified
    urls work.

  [ Martin Zobel-Helas ]
  * Add Dm-Upload-Allowed filed, so Adam can upload devscripts.
  * updated french translation

 -- Martin Zobel-Helas <zobel@debian.org>  Fri, 11 Jan 2008 10:32:59 +0100

devscripts (2.10.12) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * debcheckout: add auth support for *.launchpad.net. Thanks to Colin Watson