@@ -8,8 +8,10 @@ devscripts (2.10.14) UNRELEASED; urgency=low
   * grep-excuses: Update wipnity functionality in line with the move of
     testing.pl to release.d.o
   * checkbashisms: Warn about the use of >& and &> (Closes: #461653)
+  * deb-reversion: Support passing -b / --force-bad-version to dch
+    (Closes: #461557)
 
- -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Thu, 24 Jan 2008 16:51:11 +0000
+ -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Thu, 24 Jan 2008 21:15:33 +0000
 
 devscripts (2.10.13) unstable; urgency=low
 
